--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     <h1>Hackathon website</h1>
+    <button onClick = "addRecipe()">Click Here</button>
+    <wrapper id = "recipeCardHolder">
+        
+
+
+    </wrapper>
+
+    <script src = "scripts.js"></script>
 </body>
 </html>
