main formatting finished

--- a/index.html
+++ b/index.html
@@ -130,6 +130,6 @@
        
     </wrapper>
 
-    <script src = "scripts.js"></script>
+    <script type = "module" src = "scripts.js"></script>
 </body>
 </html>
