--- a/friends.html
+++ b/friends.html
@@ -21,9 +21,109 @@
     <main>
         <div class="weeklyLeaderboard">
             <h1>Weekly Leaderboard</h1>
+            <div class="card">
+                <img>
+                <div class="cardContent">
+                    <h1>Name</h1>
+                    <h3>Points this week:</h3>
+                    <h3>1289372</h3>
+                </div>
+            </div>
+            <div class="card">
+                <img>
+                <div class="cardContent">
+                    <h1>Name</h1>
+                    <h3>Points this week:</h3>
+                    <h3>1289372</h3>
+                </div>
+            </div>
+            <div class="card">
+                <img>
+                <div class="cardContent">
+                    <h1>Name</h1>
+                    <h3>Points this week:</h3>
+                    <h3>1289372</h3>
+                </div>
+            </div>
+            <div class="card">
+                <img>
+                <div class="cardContent">
+                    <h1>Name</h1>
+                    <h3>Points this week:</h3>
+                    <h3>1289372</h3>
+                </div>
+            </div>
+            <div class="card">
+                <img>
+                <div class="cardContent">
+                    <h1>Name</h1>
+                    <h3>Points this week:</h3>
+                    <h3>1289372</h3>
+                </div>
+            </div>
         </div>
         <div class="mainLeaderboard">
-            <h1>main</h1>
+            <h1>Main Leaderboard</h1>
+            <div class="card">
+                <img>
+                <div class="cardContent">
+                    <h1>Name</h1>
+                    <h3>Points this week:</h3>
+                    <h3>1289372</h3>
+                    <h3>Points Total:</h3>
+                    <h3>219380193</h3>
+                </div>
+            </div>
+            <div class="card">
+                <img>
+                <div class="cardContent">
+                    <h1>Name</h1>
+                    <h3>Points this week:</h3>
+                    <h3>1289372</h3>
+                    <h3>Points Total:</h3>
+                    <h3>219380193</h3>
+                </div>
+            </div>
+            <div class="card">
+                <img>
+                <div class="cardContent">
+                    <h1>Name</h1>
+                    <h3>Points this week:</h3>
+                    <h3>1289372</h3>
+                    <h3>Points Total:</h3>
+                    <h3>219380193</h3>
+                </div>
+            </div>
+            <div class="card">
+                <img>
+                <div class="cardContent">
+                    <h1>Name</h1>
+                    <h3>Points this week:</h3>
+                    <h3>1289372</h3>
+                    <h3>Points Total:</h3>
+                    <h3>219380193</h3>
+                </div>
+            </div>
+            <div class="card">
+                <img>
+                <div class="cardContent">
+                    <h1>Name</h1>
+                    <h3>Points this week:</h3>
+                    <h3>1289372</h3>
+                    <h3>Points Total:</h3>
+                    <h3>219380193</h3>
+                </div>
+            </div>
+            <div class="card">
+                <img>
+                <div class="cardContent">
+                    <h1>Name</h1>
+                    <h3>Points this week:</h3>
+                    <h3>1289372</h3>
+                    <h3>Points Total:</h3>
+                    <h3>219380193</h3>
+                </div>
+            </div>
         </div>
 
 
