--- a/friends.html
+++ b/friends.html
@@ -128,6 +128,7 @@
 
 
     </main>
-
+    <script type = "module" src = "scripts.js"></script>
+    <script src ="firebase.js"></script>
 </body>
 </html>
