--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <form>
         <label for = "ingredients"></label>
-        <input id = "ingredientInput" type = "text" placeholder=" What are we cookin' today?">
+        <input id = "ingredientInput" type = "text" placeholder=" What are we cookin' with today?">
         <button id = "searchButton" onClick = "addRecipe()">Search Recipes!</button>
     </form>
     <wrapper id = "recipeCardHolder">
@@ -131,5 +131,7 @@
     </wrapper>
 
     <script type = "module" src = "scripts.js"></script>
+    <script type = "module" src = "firebase.js"></script>
+    </script>
 </body>
 </html>
