--- a/profile.html
+++ b/profile.html
@@ -78,5 +78,7 @@
             </div>
         </div>
     </div>
+    <script type = "module" src = "scripts.js"></script>
+    <script src ="firebase.js"></script>
 </body>
 </html>
