Bug fixes, starting to create login screen

--- a/profile.html
+++ b/profile.html
@@ -24,6 +24,7 @@
             <div class ="name">YourName</div>
             <div class="pointsCard">Points:</div>
             <div class="streakArea">Current Streak:</div>
+            <div class = "logout"><button>Log out!</button></div>
         </div>
 
         <div class = "recipeHistory">
