--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             </ul>
         </nav>
     </div>
-    <form>
+    <div class = "form">
         <input id = "ingredientInput" type = "text" placeholder=" What are we cookin' with today?">
         <button id = "searchButton" onClick = "addRecipe()">Search Recipes!</button>
-    </form>
-    <wrapper id = "recipeCardHolder">
+    </div>
+        <wrapper id = "recipeCardHolder">
         <div class = "card">
             <div>
                 <img src = "applePlaceholder.jpg">
@@ -129,7 +129,7 @@
        
     </wrapper>
 
-    <script type = "module" src = "scripts.js"></script>
+    <script src = "scripts.js"></script>
     <script type = "module" src = "firebase.js"></script>
     </script>
 </body>
