--- a/profile.html
+++ b/profile.html
@@ -79,7 +79,7 @@
             </div>
         </div>
     </div>
-    <script type = "module" src = "scripts.js"></script>
+    <script src = "scripts.js"></script>
     <script src ="firebase.js"></script>
 </body>
 </html>
