--- a/index.html
+++ b/index.html
@@ -10,19 +10,22 @@
     <div class="navbar">
         <nav>
             <ul class = "navbarList">
-                <li>Meal Master</li>
-                <li><button>Home</button></li>
-                <li><button>Friends</button></li>
-                <li style = "float: right;"><button>Profile</button></li>
+                <li style = "padding-left:1%; float: left;">MealMaster</li>
+                <div class = "thisMightBreak">
+                    <li><button>Home</button></li>
+                    <li><button>Friends</button></li>
+                    <li style = "float: right;"><button>Profile</button></li>
+                </div>
             </ul>
         </nav>
     </div>
     <div class = "primaryContent">
         <div class = "form">
             <input id = "ingredientInput" type = "text" placeholder=" What are we cookin' with today?">
-            <button id = "searchButton" onClick = "addRecipe()">Search Recipes!</button>
+            <button id = "searchButton" onClick = "addRecipe()">Search</button>
         </div>
             <wrapper id = "recipeCardHolder">
+            <!--
             <div class = "card">
                 <div>
                     <img src = "applePlaceholder.jpg">
@@ -117,7 +120,7 @@
                     <p>Lorem ipsum etc etc</p>
                 </div>
             </div>
-        
+        -->
         </wrapper>
     </div>
     <script src = "scripts.js"></script>
