--- a/profile.html
+++ b/profile.html
@@ -10,10 +10,12 @@
     <div class="navbar">
         <nav>
             <ul class = "navbarList">
-                <li>Meal Master</li>
-                <li><button>Home</button></li>
-                <li><button>Friends</button></li>
-                <li style = "float: right;"><button>Profile</button></li>
+                <li style = "padding-left:1%; float: left;">MealMaster</li>
+                <div class = "thisMightBreak">
+                    <li><button>Home</button></li>
+                    <li><button>Friends</button></li>
+                    <li style = "float: right;"><button>Profile</button></li>
+                </div>
             </ul>
         </nav>
     </div>
