Successfully added log-in system

--- a/signin.html
+++ b/signin.html
@@ -24,7 +24,7 @@
           
           <div class="login-button">
             <button class="login">SIGN IN</button>
-            <button class="login" onClick = "register()">REGISTER</button>
+            <button class = "login" id="register">REGISTER</button>
             <button class="goHome">Back to Home</button>
           </div>
           <div class="password-reset">
@@ -34,6 +34,7 @@
         </div>
       </div>
   <script src = "signInScript.js"></script>
-  <script src = "firebase.js"></script>
+  <script type = "module" src="https://www.gstatic.com/firebasejs/9.5.0/firebase-database.js"></script>
+  <script type = "module" src = "firebase.js"></script>
 </body>
 </html>
