--- a/profile.html
+++ b/profile.html
@@ -82,6 +82,6 @@
         </div>
     </div>
     <script src = "scripts.js"></script>
-    <script src ="firebase.js"></script>
+    <script type = "module" src ="firebase.js"></script>
 </body>
 </html>
