Fixed functionality of navbar buttons

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <ul class = "navbarList">
                 <li style = "padding-left:1%; float: left;">MealMaster</li>
                 <div class = "thisMightBreak">
-                    <li><button>Home</button></li>
-                    <li><button>Friends</button></li>
+                    <li><button onclick="homeButton()">Home</button></li>
+                    <li><button onclick="friendsButton()">Friends</button></li>
                     <li style = "float: right;"><button>Profile</button></li>
                 </div>
             </ul>
