Added logging in

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class = "thisMightBreak">
                     <li><button onclick="homeButton()">Home</button></li>
                     <li><button onclick="friendsButton()">Friends</button></li>
-                    <li style = "float: right;"><button>Profile</button></li>
+                    <li style = "float: right;"><button id = "profileButton">Profile</button></li>
                 </div>
             </ul>
         </nav>
@@ -123,8 +123,8 @@
         -->
         </wrapper>
     </div>
-    <script src = "scripts.js"></script>
     <script type = "module" src = "firebase.js"></script>
+    <script src = "scripts.js"></script>
     </script>
 </body>
 </html>
