--- a/signin.html
+++ b/signin.html
@@ -23,7 +23,7 @@
           </div>
           
           <div class="login-button">
-            <button class="login">SIGN IN</button>
+            <button class="login" id = "login">SIGN IN</button>
             <button class = "login" id="register">REGISTER</button>
             <button class="goHome">Back to Home</button>
           </div>
@@ -34,6 +34,7 @@
         </div>
       </div>
   <script src = "signInScript.js"></script>
+  <script type = "module" src = "https://www.gstatic.com/firebasejs/10.4.0/firebase-auth.js"></script>
   <script type = "module" src="https://www.gstatic.com/firebasejs/9.5.0/firebase-database.js"></script>
   <script type = "module" src = "firebase.js"></script>
 </body>
