formatted friends page

--- a/friends.html
+++ b/friends.html
@@ -23,106 +23,100 @@
         <div class="weeklyLeaderboard">
             <h1>Weekly Leaderboard</h1>
             <div class="card">
-                <img>
+                <img src="ProfileImages/pexels-andrea-piacquadio-3768689.jpg">
                 <div class="cardContent">
-                    <h1>Name</h1>
+                    <h1 style="font-size: xx-large;">Aiden</h1>
                     <h3>Points this week:</h3>
-                    <h3>1289372</h3>
+                    <h3 class="pointsText">30</h3>
                 </div>
             </div>
             <div class="card">
-                <img>
+                <img src="ProfileImages/pexels-andrea-piacquadio-3777943.jpg">
                 <div class="cardContent">
-                    <h1>Name</h1>
+                    <h1 style="font-size: xx-large;">Marvin</h1>
                     <h3>Points this week:</h3>
-                    <h3>1289372</h3>
+                    <h3 class="pointsText">23</h3>
                 </div>
             </div>
             <div class="card">
-                <img>
+                <img src="ProfileImages/pexels-andrea-piacquadio-3786525.jpg">
                 <div class="cardContent">
-                    <h1>Name</h1>
+                    <h1 style="font-size: xx-large;">Ria</h1>
                     <h3>Points this week:</h3>
-                    <h3>1289372</h3>
+                    <h3 class="pointsText">22</h3>
                 </div>
             </div>
             <div class="card">
-                <img>
+                <img src="ProfileImages/pexels-andrea-piacquadio-3789888.jpg">
                 <div class="cardContent">
-                    <h1>Name</h1>
+                    <h1 style="font-size: xx-large;">Leo</h1>
                     <h3>Points this week:</h3>
-                    <h3>1289372</h3>
+                    <h3 class="pointsText">19</h3>
                 </div>
             </div>
             <div class="card">
-                <img>
+                <img  src="ProfileImages/pexels-andrea-piacquadio-3807770.jpg">
                 <div class="cardContent">
-                    <h1>Name</h1>
+                    <h1 style="font-size: xx-large;">Veronica</h1>
                     <h3>Points this week:</h3>
-                    <h3>1289372</h3>
+                    <h3 class="pointsText">12</h3>
                 </div>
             </div>
         </div>
         <div class="mainLeaderboard">
             <h1>Main Leaderboard</h1>
             <div class="card">
-                <img>
+                <img src="ProfileImages/pexels-andrea-piacquadio-3807852.jpg">
                 <div class="cardContent">
-                    <h1>Name</h1>
-                    <h3>Points this week:</h3>
-                    <h3>1289372</h3>
+                    <h1 style="font-size: xx-large;">Hazel</h1>
+                    <h3>Points this week: 8</h3>
                     <h3>Points Total:</h3>
-                    <h3>219380193</h3>
+                    <h3 class="pointsText">134</h3>
                 </div>
             </div>
             <div class="card">
-                <img>
+                <img src="ProfileImages/pexels-andrea-piacquadio-3812720.jpg">
                 <div class="cardContent">
-                    <h1>Name</h1>
-                    <h3>Points this week:</h3>
-                    <h3>1289372</h3>
+                    <h1 style="font-size: xx-large;">Maisie</h1>
+                    <h3>Points this week: 3</h3>
                     <h3>Points Total:</h3>
-                    <h3>219380193</h3>
+                    <h3 class="pointsText">111</h3>
                 </div>
             </div>
             <div class="card">
-                <img>
+                <img src="ProfileImages/pexels-andrea-piacquadio-762020.jpg">
                 <div class="cardContent">
-                    <h1>Name</h1>
-                    <h3>Points this week:</h3>
-                    <h3>1289372</h3>
+                    <h1 style="font-size: xx-large;">Josie</h1>
+                    <h3>Points this week: 4</h3>
                     <h3>Points Total:</h3>
-                    <h3>219380193</h3>
+                    <h3 class="pointsText">94</h3>
                 </div>
             </div>
             <div class="card">
-                <img>
+                <img src="ProfileImages/pexels-christina-morillo-1181519.jpg">
                 <div class="cardContent">
-                    <h1>Name</h1>
-                    <h3>Points this week:</h3>
-                    <h3>1289372</h3>
+                    <h1 style="font-size: xx-large;">Hollie</h1>
+                    <h3>Points this week: 5</h3>
                     <h3>Points Total:</h3>
-                    <h3>219380193</h3>
+                    <h3 class="pointsText">75</h3>
                 </div>
             </div>
             <div class="card">
-                <img>
+                <img  src="ProfileImages/pexels-andrea-piacquadio-3789888.jpg">
                 <div class="cardContent">
-                    <h1>Name</h1>
-                    <h3>Points this week:</h3>
-                    <h3>1289372</h3>
+                    <h1 style="font-size: xx-large;">Mae</h1>
+                    <h3>Points this week: 7</h3>
                     <h3>Points Total:</h3>
-                    <h3>219380193</h3>
+                    <h3 class="pointsText">66</h3>
                 </div>
             </div>
             <div class="card">
-                <img>
+                <img src="ProfileImages/pexels-doug-bolton-1445527.jpg">
                 <div class="cardContent">
-                    <h1>Name</h1>
-                    <h3>Points this week:</h3>
-                    <h3>1289372</h3>
+                    <h1 style="font-size: xx-large;">Kyle</h1>
+                    <h3>Points this week: 9</h3>
                     <h3>Points Total:</h3>
-                    <h3>219380193</h3>
+                    <h3 class="pointsText">58</h3>
                 </div>
             </div>
         </div>
