Fixed home button

--- a/signin.html
+++ b/signin.html
@@ -25,7 +25,7 @@
           <div class="login-button">
             <button class="login" id = "login">SIGN IN</button>
             <button class = "login" id="register">REGISTER</button>
-            <button class="goHome">Back to Home</button>
+            <button class="goHome" onclick = "homeButton()">Back to Home</button>
           </div>
           <div class="password-reset">
             <p>Forgot your password?</p>
