began formatting profile page

--- a/profile.html
+++ b/profile.html
@@ -22,10 +22,10 @@
     
     <div class="mainContent">
         <div class = "profileArea">
-            <img src = "applePlaceholder.jpg">
-            <div class ="name">YourName</div>
-            <div class="pointsCard">Points:</div>
-            <div class="streakArea">Current Streak:</div>
+            <img src = "ProfileImages/images.png">
+            <div class ="name" id="user">Your Name</div>
+            <div class="pointsCard">Total Points:</div>
+            <h1 class="totalProfilePoints">7560</h1>
             <div class = "logout"><button>Log out!</button></div>
         </div>
 
@@ -44,15 +44,11 @@
                 <div>
                     <div class = "recipeNameArea">
                         <h1>Recipe name</h1>
-                        <h1>Points value</h1>
+                        <h2>Points value</h2>
                     </div>
                     <div class = "prepArea">
-                        <h3>Prep Time: 3 Hours</h3>
-                        <h3>Cook time: 2 Hours</h3>
-                        <h3>Servings: 5 people</h3>
+                        <h3>Estimated Time</h3>
                     </div>
-                    <h2>Instructions</h2>
-                    <p>Lorem ipsum etc etc</p>
                 </div>
             </div>
             <div class = "card">
@@ -68,17 +64,14 @@
                 <div>
                     <div class = "recipeNameArea">
                         <h1>Recipe name</h1>
-                        <h1>Points value</h1>
+                        <h2>Points value</h2>
                     </div>
                     <div class = "prepArea">
-                        <h3>Prep Time: 3 Hours</h3>
-                        <h3>Cook time: 2 Hours</h3>
-                        <h3>Servings: 5 people</h3>
+                        <h3>Estimated Time</h3>
                     </div>
-                    <h2>Instructions</h2>
-                    <p>Lorem ipsum etc etc</p>
                 </div>
             </div>
+
         </div>
     </div>
     <script src = "scripts.js"></script>
