added food images for profile page

--- a/profile.html
+++ b/profile.html
@@ -26,14 +26,14 @@
             <div class ="name" id="user">Your Name</div>
             <div class="pointsCard">Total Points:</div>
             <h1 class="totalProfilePoints">7560</h1>
-            <div class = "logout"><button>Log out!</button></div>
+            <div class = "logout"><button>LOGOUT</button></div>
         </div>
 
         <div class = "recipeHistory">
             <h1>Recipe History</h1>
             <div class = "card">
                 <div>
-                    <img src = "applePlaceholder.jpg">
+                    <img src = "FoodImages/images.jfif">
                     <h2>Ingredients</h2>
                     <ul>
                         <li></li>
@@ -53,7 +53,7 @@
             </div>
             <div class = "card">
                 <div>
-                    <img src = "applePlaceholder.jpg">
+                    <img src = "FoodImages/foods-to-stockup-135583514-770x533-1.jpg">
                     <h2>Ingredients</h2>
                     <ul>
                         <li></li>
