--- a/signin.html
+++ b/signin.html
@@ -34,6 +34,7 @@
         </div>
       </div>
   <script src = "signInScript.js"></script>
+  <script src = "scripts.js"></script>
   <script type = "module" src = "https://www.gstatic.com/firebasejs/10.4.0/firebase-auth.js"></script>
   <script type = "module" src="https://www.gstatic.com/firebasejs/9.5.0/firebase-database.js"></script>
   <script type = "module" src = "firebase.js"></script>
