--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class = "recipeHistory">
-            <h1>Recipe History</h1>
+            <h1 class="recipeHistoryTitle">Recipe History</h1>
             <div class = "card">
                 <div>
                     <img src = "FoodImages/images.jfif">
@@ -43,11 +43,11 @@
                 </div>
                 <div>
                     <div class = "recipeNameArea">
-                        <h1>Recipe name</h1>
-                        <h2>Points value</h2>
+                        <h1>Slow Cook Chicken Stew</h1>
+                        <h2>Points value: 300</h2>
                     </div>
                     <div class = "prepArea">
-                        <h3>Estimated Time</h3>
+                        <h3>Estimated Time: 130 minutes</h3>
                     </div>
                 </div>
             </div>
@@ -63,11 +63,11 @@
                 </div>
                 <div>
                     <div class = "recipeNameArea">
-                        <h1>Recipe name</h1>
-                        <h2>Points value</h2>
+                        <h1>Beans and Rice</h1>
+                        <h2>Points value: 100</h2>
                     </div>
                     <div class = "prepArea">
-                        <h3>Estimated Time</h3>
+                        <h3>Estimated Time: 55 minutes</h3>
                     </div>
                 </div>
             </div>
