Friends profile fixed

--- a/friends.html
+++ b/friends.html
@@ -124,6 +124,6 @@
 
     </main>
     <script src = "scripts.js"></script>
-    <script src ="firebase.js"></script>
+    <script type = "module" src ="firebase.js"></script>
 </body>
 </html>
