added addpoints button

--- a/friends.html
+++ b/friends.html
@@ -14,7 +14,7 @@
                 <div class = "thisMightBreak">
                     <li><button onclick="homeButton()">Home</button></li>
                     <li><button onclick="friendsButton()">Friends</button></li>
-                    <li style = "float: right;"><button>Profile</button></li>
+                    <li style = "float: right;" id = "profileButton"><button>Profile</button></li>
                 </div>
             </ul>
         </nav>
