--- a/profile.html
+++ b/profile.html
@@ -23,9 +23,9 @@
     <div class="mainContent">
         <div class = "profileArea">
             <img src = "ProfileImages/images.png">
-            <div class ="name" id="user">Your Name</div>
+            <div class ="name" id="user">referrelliii</div>
             <div class="pointsCard">Total Points:</div>
-            <h1 class="totalProfilePoints">7560</h1>
+            <h1 class="totalProfilePoints">650</h1>
             <div class = "logout"><button>LOGOUT</button></div>
         </div>
 
